# openomf

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  AGENTS.md  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  DEBUG-KEYS.md  INSTALL.md  LICENSE  Makefile  NETWORKING.md  NOTICE  PATHS.md  README.md  RELEASING.md  emconfig.sh  libShadowDive.cbp  lsan.supp  pyproject.toml  run_pytest.sh  run_rectests.sh  sonar-project.properties  vcpkg-configuration.json  vcpkg.json
.github/ISSUE_TEMPLATE/: gameplay-bug.md  graphics-bug.md
.github/workflows/: compilation.yml  functional.yml  release.yml
cmake-scripts/: BuildLanguages.cmake  CMakeLists-emscripten.cmake  ClangFormat.cmake  Dependencies.cmake  FindArgtable2.cmake  FindCUnit.cmake  FindEpoxy.cmake  FindGLEW.cmake  FindLibintl.cmake  FindOpenAL.cmake  FindSDL2.cmake  FindSDL2_mixer.cmake  FindSDL2mixer.cmake  FindShadowdive.cmake  Findao.cmake  Findargtable2.cmake  Findargtable3.cmake  Findchipmunk.cmake  Findconfig.cmake  Findconfuse.cmake  Finddumb.cmake  Findenet.cmake  Findlibconfig.cmake  Findminiupnpc.cmake  Findmodplug.cmake  Findnatpmp.cmake  Findogg.cmake  Findopusfile.cmake  Findshadowdive.cmake  Findsqlite.cmake  Findvorbis.cmake  Findxmp.cmake  LanguageStrings.cmake  mingw-w64-toolchain.cmake  version.cmake
doc/: Doxyfile  Makefile  README.md  generate_docs.sh  requirements.txt
doc/source/: conf.py  index.rst
docs/: .gitignore  Makefile  README.md
docs/source/: index.rst
emscripten/: openomf.html
include/: af.h  animation.h  bk.h  bkanim.h  engine.h  error.h  main.h  move.h  palette.h  platform.h.in  rgba_image.h  sounds.h  sprite.h  sprite_image.h  vga_image.h
include/audio/: audio.h  music.h  sink.h  sound.h  sound_state.h  soundloader.h  source.h  stream.h
include/console/: console.h  console_type.h
include/controller/: ai_controller.h  builtin_mappings.h  controller.h  game_controller_db.h  gamecontrollerdb.h  joystick.h  keyboard.h  net_controller.h  rec_controller.h
include/formats/: actions.h  af.h  altpal.h  animation.h  bk.h  bkanim.h  chr.h  colcoord.h  error.h  fonts.h  language.h  move.h  palette.h  pic.h  pilot.h  rec.h  rgba_image.h  score.h  script.h  setup.h  sounds.h  sprite.h  taglist.h  tournament.h  vga_image.h
include/game/: animation.h  animationplayer.h  common_defines.h  game_player.h  game_state.h  game_state_type.h  har.h  object.h  particle.h  scene.h  score.h  serial.h  settings.h  ticktimer.h
include/internal/: animation.h  reader.h  writer.h
include/plugins/: base_plugin.h  plugins.h  scaler_plugin.h
include/resources/: af.h  af_loader.h  af_move.h  animation.h  bk.h  bk_info.h  bk_loader.h  (+12 more)
packaging/: CMakeLists.txt  README.md
packaging/debian/: CMakeLists.txt  copyright
pytest/: test_menus.py
rectests/: 65K6P.REC  6P.REC  AIR-HIT.REC  AIR_IMMUNITY_NO_REHIT.REC  AIR_IMMUNITY_REHIT.REC  AIR_TURN.REC  BLOCKING_INTERRUPT.REC  CHRONOS-WALLNOCLIP.REC  CHRONOS_AIR_STASIS.REC  CHRONOS_TELEPORT_CONTROL.REC  CHRONOS_THROW_COMBO_FAIL.REC  DAMPENED_STUN.REC  DIVING-CLAW.REC  DODGE_EARTHQUAKE.REC  ELECTRA-EXROLLTHNDR-WALLBOUNCE.REC  ELECTRA-MOVE36-EMFLAG.REC  FACE-JUMPING-ENEMY.REC  FLAIL_454P.REC  FLAIL_DESTRUCT.REC  FLY.REC  INPUT-FRESHNESS.REC  JAG-CORNER-THROW.REC  JAG-DESTRUCT.REC  JAG-NO-SLIDE-WIN-THROW.REC  JAG-THROW-LAND.REC  JUMP_DELAY.REC  KATANA-WALLSPIN-NOINTERRUPT.REC  KATANA_DAMAGE.REC  KATANA_STOMP_TURN.REC  KATANA_WINPOSE.REC  KEEP-WALKING-AFTER-JAG-STANDING-THROW.REC  KICK-NOTURN.REC  KNOCKBACK-DIR.REC  KREISSACK.REC  LANDING_RECOVERY.REC  NO-IDLE-DEFEAT.REC  NOVA-1P.REC  NOVA-GRENADE.REC  NOVA_FLOP_STUN_COMBO.REC  NO_STUN_JUGGLE.REC  (+27 more)
resources/: DANISH.TXT  DANISH2.TXT  ENGLISH2.TXT  GERMAN2.TXT  create_openomf_bk.sh  gamecontrollerdb.txt  openomf.bk  openomf.gpl  openomf.gpl.old  tags.csv  tags_to_array.py  tags_to_sqlite.py
shaders/: debug_atlas.frag  direct.frag  direct.vert  palette.frag  palette.vert  remap.frag  rgba.frag  rgba.vert  scale.frag
src/: af.c  altpal.c  animation.c  bk.c  bkanim.c  chr.c  colcoord.c  engine.c  engine.h  engine_net.c  error.c  fonts.c  language.c  main.c  main_net.c  move.c  palette.c  pic.c  pilot.c  platform.h.in  rec.c  rgba_image.c  score.c  script.c  sounds.c  sprite.c  sprite_image.c  stringparser.c  taglist.c  tournament.c  vga_image.c
test/: altpals.c  fonts.c  helpers.c  helpers.h  roundtrip.c  sounds_main.c  test_altpals.c  test_chr.c  test_fonts.c  test_language.c  test_main.c  test_pic.c  test_rec.c  test_score.c  test_stringparser.c  test_tourn.c
testing/: CMakeLists.txt  common.h  test_af.c  test_array.c  test_bk.c  test_bk_reader.c  test_c_string_util.c  test_cp437.c  test_fixedptc_str.c  test_hashmap.c  test_lib.c  test_list.c  test_main.c  test_net_controller.c  test_oklab.c  test_palette.c  test_path.c  test_rec.c  test_ringbuffer.c  test_script.c  test_script_reader.c  test_smallbuffer.c  test_sound_tracker.c  test_sprite_packer.c  test_sstream.c  test_str.c  test_stringparser.c  test_text_layout.c  test_text_markup.c  test_text_render.c  test_trn.c  test_vector.c  test_video_common.c
testing/misc/: parser_test_strings.c  parser_test_strings.h
testing/recs/: crystal-shirro.rec
tools/: .gitignore  CMakeLists.txt  LICENSE  README.md
tools/afdiff/: main.c
tools/aftool/: main.c
tools/altpaltool/: main.c
tools/bktool/: main.c
tools/chrtool/: main.c
tools/cmake-scripts/: Findao.cmake  Findsqlite.cmake
tools/fonttool/: main.c
tools/languagetool/: main.c
tools/paltool/: main.c
tools/pcxtool/: main.c
tools/pictool/: main.c
tools/rectool/: main.c
tools/scoretool/: main.c
tools/setuptool/: main.c
tools/shared/: animation_misc.c  animation_misc.h  conversions.c  conversions.h  pilot.c  pilot.h
tools/soundtool/: main.c
tools/src/aftool/: main.c
tools/src/bktool/: main.c
tools/src/fonttool/: main.c
tools/src/shared/: conversions.c  pilot.h
tools/src/stringtool/: main.c
tools/src/trntool/: main.c
tools/stringparser/: main.c
tools/trntool/: main.c
travis/: build.sh  cov-configure.sh  deps.sh  make.sh
(+917 files in other folders)
